# scout_localization

./: .gitignore  README.md
src/intro_to_robot_autonomy/: CMakeLists.txt  package.xml
src/intro_to_robot_autonomy/config/: global_conf.yaml  imu_wheel.yaml  local_cam.yaml  local_conf.yaml  local_imu.yaml  local_imu_cam.yaml  local_imu_wheel.yaml  local_imu_wheel_cam.yaml  local_wheel.yaml  local_wheel_cam.yaml  vel_commands.yaml  vis_odom.cfg
src/intro_to_robot_autonomy/include/: inspection_empty_world.launch
src/intro_to_robot_autonomy/launch/: term_project copy.launch  term_project.launch  term_project_gps.launch  term_project_gps_ukf.launch  term_project_ukf.launch
src/intro_to_robot_autonomy/meshes/: GPS.stl  IMU.stl
src/intro_to_robot_autonomy/msg/: MSE.msg
src/intro_to_robot_autonomy/rqt_multiplot_conf/: all.xml  circle.xml  gps.xml  gps_acc.xml  ground_truth_vs_filtered.xml  ground_truth_vs_local_vs_global.xml  imu.xml  mse.xml  odom_disp.xml
src/intro_to_robot_autonomy/rviz/: hw2.rviz  hw3.rviz
src/intro_to_robot_autonomy/src/: circle_mov_command.cpp  gps_acc.cpp  imu_acc.cpp  live_map.py  mse.cpp  pub_odom_from_robot_state.cpp  vel_commands.cpp
src/mono-slam/: CMakeLists.txt
src/scout_odometry/src/project1/: CMakeLists.txt
src/scout_odometry/src/project1/include/project1/: robot_constants.h
src/scout_odometry/src/project1/launch/: launcher.launch
src/scout_odometry/src/project1/src/: joint_states_to_motor_speed.cpp  odometry.cpp
src/ugv_sim/autokit/launch/: gazebo.launch
src/ugv_sim/scout/scout_control/config/: scout2_control.yaml
src/ugv_sim/scout/scout_description/launch/: gazebo.launch
src/ugv_sim/scout/scout_description/rviz/: model_display.rviz
src/ugv_sim/scout/scout_description/urdf/: scout_v2.gazebo  scout_v2.xacro
src/ugv_sim/scout/scout_gazebo_sim/: CMakeLists.txt
src/ugv_sim/scout/scout_gazebo_sim/config/: scout_v2_control.yaml
src/ugv_sim/scout/scout_gazebo_sim/launch/: scout_empty_world.launch  spawn_scout_mini.launch  spawn_scout_v2.launch
