<?xml version="1.0"?>
<package>
  <name>intro_to_robot_autonomy</name>
  <version>0.0.1</version>
  <description>ROS package for lesson KON-414E Homeworks</description>

  <author email="unlumu20@itu.edu.tr">unlumu</author>
  <maintainer email="unlumu20@itu.edu.tr">unlumu</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>scout_description</run_depend>
  <run_depend>rostopic</run_depend>

  <export>
  </export>
</package>
